# rust_tracer

./: .dev  .gitignore  Cargo.toml
.cargo/: config
src/: bmp.rs  cli.rs  gui.rs  main.rs  my_scene.rs  render.rs  render_tree.rs
src/math/: matrix.rs  mod.rs  point.rs  ray.rs  vector3.rs  vector4.rs
src/scene/: color.rs  cube.rs  intersection.rs  material.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
