[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Erich Ess <erich.g.ess@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cairo-rs = {version="^0", features=["png"]}
image = "*"
clap = "*"

[target.'cfg(unix)'.dependencies]
termion = "*"
gtk = "*"
gio = "*"
glib = "*"
